Prepare bot_3